<resources>
    <string name="app_name">StudySync</string>
    <string name="flashcard_set">Flashcard Sets</string>
    <string name="search_sets">Search Sets</string>
    <string name="flashcard_name">Flashcard Set Name</string>
    <string name="items">Items</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="dont_know_text">Don\'t Know</string>
    <string name="know_term_text">Term Known</string>
    <string name="dont_know_term_text">Term Needs Review</string>
    <string name="know_text">Know</string>
    <string name="tap_text">Tap the card to flip</string>
    <string name="title">Title</string>
    <string name="request_edit">Request Edit</string>
    <string name="copy">Make a Copy</string>
    <string name="request_access">Request Access</string>
    <string name="owner_username">owner username</string>
    <string name="add_flashcard">Add Flashcard</string>
    <string name="edit_flashcard">Edit Flashcard</string>
    <string name="generate_from_image">Generate set from Image</string>
    <string name="generate_from_pdf">Generate set from PDF</string>
    <string name="add_new_set">Add a new set</string>
    <string name="card_orientation">Card Orientation</string>
    <string name="download">Download</string>
    <string name="privacy">Set Privacy</string>
    <string name="reminder">Set a Reminder</string>
    <string name="send">Send to Chat</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="new_email">New Email</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_new_pass">Confirm New Password</string>
    <string name="curr_pass">Current Password</string>
    <string name="change_username">Change Username</string>
    <string name="change_fullname">Change Full Name</string>
    <string name="change_email">Change Email</string>
    <string name="change_pass">Change Password</string>
    <string name="no_flashcard">No Flashcard Set Yet</string>
    <string name="settings">Settings</string>
    <string name="flashcard_attempt">Flashcard Attempt</string>
    <string name="set_up_profile">Set Up Profile</string>
    <string name="see_members">See Members</string>
    <string name="shared_media">Shared Media/Files</string>
    <string name="notif">Notifications</string>
    <string name="downloaded_sets">Downloaded Sets</string>
    <string name="leave_chatroom">Leave Chat Room</string>
    <string name="delete_chatroom">Delete Chat Room</string>
    <string name="chatroom_name">Chat Room Name</string>
    <string name="add_quiz">Add Quiz</string>
    <string name="share">Share</string>
    <string name="view">View</string>
    <string name="done">Done</string>
    <string name="only_people_with_access_can_view_edit">Only People with Access can View or Edit</string>
    <string name="anyone_can_view">Anyone Can View</string>
    <string name="general_access">General Access</string>
    <string name="poeple_with_access">People With Access</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="no_quizzes">No Quizzes Yet</string>
    <string name="quiz_review">Quiz Review</string>
    <string name="quiz_list">Quiz List</string>
    <string name="your_progress">Your Progress</string>
    <string name="still_learning">Still Learning</string>
    <string name="keep_reviewing_terms">Keep Reviewing Terms</string>
    <string name="restart_flashcard">Restart Flashcards</string>
    <string name="keep_reviewing_questions">Keep Reviewing Questions</string>
    <string name="retake_quiz">Retake Quiz</string>
    <string name="default_web_client_id">663259425490-8bakn0b8700hjnooi9ei6ol4sqp8mjdt.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_photo">Group Photo</string>
    <string name="profile">Profile</string>
    <string name="submit">Submit</string>
    <string name="choose_your_answer">Choose your answer</string>
    <string name="score">Score: </string>
    <string name="option_text">Option Text</string>
    <string name="term">Term</string>
    <string name="definition">Definition</string>
    <string name="shuffle">Shuffle</string>
    <string name="start_flashcard">Start Flashcard</string>
    <string name="back">Back</string>
    <string name="downloaded">Downloaded</string>
    <string name="not_download">Not Downloaded Yet</string>
    <string name="created_at">Created At mm/dd/yyyy</string>
    <string name="enter_option">Enter option</string>
    <string name="enter_answer">Enter answer</string>
    <string name="delete_option">Delete option</string>
    <string name="privacy_public">Public</string>
    <string name="privacy_private">Private</string>
    <string name="shared_sets">Shared Sets</string>
    <string name="stats_quiz">Start Quiz</string>
    <string-array name="quiz_types">
        <item>Multiple Choice</item>
        <item>Enumeration/Identification</item>
        <item>True or False</item>
    </string-array>
    <string name="check">Check</string>
    <string name="question">Question</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="selected_wrong_answer">Incorrect Answer</string>
    <string name="your_answer">Your answers</string>
    <string name="no_access_text">You do not have access to view this flashcard set/quiz.</string>
    <string name="people">People</string>
    <string name="quizzes">Quizzes</string>
    <string name="flashcards">Flashcards</string>
    <string name="show_filter">Show Filters</string>
    <string name="hide_filter">Hide Filters</string>
    <string name="search_hint">Search users, cards, or quizzes...</string>
    <string name="info_page_1">1. There are two types of questions:\n🟩 Multiple Choice – Select one correct answer\n🟨 Enumeration – Fill in one or more correct answers</string>
    <string name="info_page_2">2. Answers are checked instantly. To proceed, you must submit an answer, even if you\'re unsure.\nCorrect answers will be shown right after submission.</string>
    <string name="info_page_3">3. Answer colors matter:\n🟥 Red = Incorrect\n🟩 Green = Correct</string>
    <string name="info_page_4">4. Enumeration is scored strictly to help reinforce memorization of item lists.\nPartial credit is given only when applicable.</string>
    <string name="info_page_5">5. This is a one-way quiz — you can\'t go back to previous questions once answered.\nYou may restart the quiz anytime, just note that your progress will reset.</string>
    <string name="select_time_prompt">Select seconds per question</string>
    <string name="no_notifs">No New Notifications</string>
    <string name="no_chatrooms">No chatrooms yet.\n Tap the + icon to start one!</string>
    <string name="reminders_for_upcoming_reviews">Reminders for Upcoming Reviews</string>
    <string name="no_access_deleted">The set you are trying to open \ndoes not exist.</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="generate_set_disclaimer"> AI is being used for these features and can make mistakes. Double check important information.</string>

</resources>


