<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/download"
        android:drawablePadding="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/download"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/Lock"
        android:drawablePadding="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/privacy"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/notifications"
        android:drawablePadding="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/reminder"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sendToChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/send"
        android:drawablePadding="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="Send to Chat"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/edit"
        android:drawablePadding="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/edit"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/delete"
        android:drawablePadding="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/delete"
        android:textColor="@color/warning"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>