<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/generate_from_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/image"
        android:drawablePadding="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/generate_from_image"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/generate_from_pdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/attach_file"
        android:drawablePadding="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/generate_from_pdf"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/add_new_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/add_circle"
        android:drawablePadding="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/add_new_set"
        android:textColor="@color/black"
        android:textSize="16sp" />
</LinearLayout>