<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ChangeFullnameActivity">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigationView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="16dp"
            android:contentDescription="Back"
            android:src="@drawable/arrow_back" />

        <TextView
            android:id="@+id/save_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_margin="16dp"
            android:text="@string/save"
            android:textColor="@color/primary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtView_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/change_pass"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

    </com.google.android.material.navigation.NavigationView>

    <EditText
        android:id="@+id/current_pass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:background="@drawable/custom_edittxt"
        android:drawableEnd="@drawable/eye_closed_resized"
        android:drawableTint="@color/text_gray"
        android:hint="@string/curr_pass"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/text_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigationView" />

    <EditText
        android:id="@+id/set_pass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:background="@drawable/custom_edittxt"
        android:drawableEnd="@drawable/eye_closed_resized"
        android:drawableTint="@color/text_gray"
        android:hint="@string/new_pass"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/text_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_pass" />

    <EditText
        android:id="@+id/confirm_pass"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:background="@drawable/custom_edittxt"
        android:drawableEnd="@drawable/eye_closed_resized"
        android:drawableTint="@color/text_gray"
        android:hint="@string/confirm_new_pass"
        android:minHeight="48dp"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/text_gray"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_pass" />
</androidx.constraintlayout.widget.ConstraintLayout>