<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_popup_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/generate_from_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/click_effect"
        android:clickable="true"
        android:drawableStart="@drawable/image"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/generate_from_image"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/generate_from_pdf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/click_effect"
        android:clickable="true"
        android:drawableStart="@drawable/attach_file"
        android:drawablePadding="16dp"
        android:focusable="true"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/generate_from_pdf"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/add_new_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/add_circle"
        android:drawablePadding="16dp"
        android:gravity="center_vertical"
        android:paddingStart="10dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/add_new_set"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:background="@drawable/click_effect"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>
